# simplereconstruction

./: CMakeLists.txt  README.md  hcomparator.cpp  hcomparator.h  hframe.cpp  hframe.h  hglscreen.cpp  hglscreen.h  hmodel.cpp  hmodel.h  hmodelviewer.cpp  hmodelviewer.h  hreconstruction.cpp  hreconstruction.h  hvirtualtrackball.cpp  hvirtualtrackball.h  main.cpp
test_data/teapot/: teapot.files.txt
